# crew-crucible

./: .gitignore  README.md  pyproject.toml
docs/superpowers/: README.md
marketplace/: plugins.json
plugins/agent-crucible/: CLAUDE.md
skills/: orchestration-default.md
src/codex_claude_orchestrator/: bridge_supervisor_loop.py  claude_bridge.py  claude_window.py  cli.py  policy_gate.py  run_recorder.py  skill_evolution.py  tmux_console.py  ui_server.py  verification_runner.py
tests/: test_bridge_supervisor_loop.py  test_claude_bridge.py  test_claude_window.py  test_cli.py  test_policy_gate.py  test_run_recorder.py  test_skill_evolution.py  test_tmux_console.py  test_ui_server.py  test_verification_runner.py
tests/adapters/: test_claude_cli.py
tests/bridge/: __init__.py  test_claude_bridge.py  test_supervisor_loop.py
tests/cli/: test_cli.py
tests/core/: test_models.py  test_policy_gate.py
tests/crew/: __init__.py  test_controller.py  test_decision_policy.py  test_merge_arbiter.py  test_models.py  test_readiness.py  test_supervisor_loop.py  test_supervisor_loop_step.py  test_task_graph.py
tests/mcp_server/: test_crew_context_tools.py  test_crew_decision_tools.py  test_crew_execution_tools.py  test_crew_lifecycle_tools.py  test_crew_run_tools.py  test_integration.py  test_server.py
tests/messaging/: __init__.py  test_message_bus.py  test_protocol_requests.py
tests/packs/: __init__.py  test_registry.py
tests/runtime/: __init__.py  test_claude_window.py  test_native_claude_session.py  test_tmux_console.py
tests/session/: __init__.py  test_agent_registry.py  test_engine.py  test_prompt_compiler.py  test_skill_evolution.py  test_supervisor.py
tests/state/: test_blackboard.py  test_crew_recorder.py  test_run_recorder.py  test_session_recorder.py
tests/ui/: __init__.py  test_server.py
tests/v4/: test_accept_readiness.py  test_adversarial_evaluator.py  test_adversarial_models.py  test_adversarial_workflow.py  test_artifacts.py  test_completion.py  test_crew_runner.py  test_crew_state_projection.py  test_domain_events.py  test_event_store.py  test_event_store_factory.py  test_event_stream.py  test_learning.py  test_learning_feedback.py  test_learning_projection.py  test_long_task_integration.py  test_long_task_models.py  test_long_task_supervisor.py  test_merge_inputs.py  test_merge_transaction.py  test_outbox.py  test_parallel_supervisor.py  test_paths.py  test_planner.py  test_postgres_event_store.py  test_projections.py  test_reconciler.py  test_repo_intelligence.py  test_runtime_models.py  test_subtask.py  test_subtask_extension.py  test_supervisor.py  test_tmux_claude_adapter.py  test_turn_context.py  test_watchers.py  test_workflow.py
tests/verification/: test_crew_runner.py  test_result_evaluator.py  test_runner.py
tests/workers/: __init__.py  test_change_recorder.py  (+4 more)
(+153 files in other folders)
