[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-claude-orchestrator"
version = "0.1.0"
description = "Local Codex-first orchestrator for Claude Code workers"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
orchestrator = "codex_claude_orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-p", "no:capture", "-p", "no:debugging"]
