[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-crucible"
version = "0.1.0"
description = "Multi-agent code review with adversarial verification for Claude Code."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["claude", "multi-agent", "code-review", "adversarial", "mcp", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Repository = "https://github.com/zhangclaus/agent-crucible"
Issues = "https://github.com/zhangclaus/agent-crucible/issues"

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
acr = "codex_claude_orchestrator.cli:main"
acr-mcp = "codex_claude_orchestrator.mcp_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_claude_orchestrator = ["agent_packs/builtin/capabilities/*.md", "agent_packs/builtin/protocols/*.md", "skills/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-p", "no:capture", "-p", "no:debugging"]
